src/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_or_empty
Rule 2     instructions_or_empty -> <empty>
Rule 3     instructions_or_empty -> instructions
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> { instructions }
Rule 7     instruction -> PRINT row ;
Rule 8     instruction -> CONTINUE ;
Rule 9     instruction -> BREAK ;
Rule 10    instruction -> assign ;
Rule 11    instruction -> if_i
Rule 12    instruction -> for_l
Rule 13    instruction -> while_l
Rule 14    instruction -> return_i
Rule 15    expr -> matrix
Rule 16    expr -> - expr  [precedence=right, level=8]
Rule 17    expr -> ( expr )
Rule 18    expr -> FLOATNUM
Rule 19    expr -> ID
Rule 20    expr -> STRING
Rule 21    expr -> INTNUM
Rule 22    expr -> expr TRANSPOSE  [precedence=left, level=9]
Rule 23    expr -> expr NEQ expr  [precedence=nonassoc, level=5]
Rule 24    expr -> expr EQ expr  [precedence=nonassoc, level=5]
Rule 25    expr -> expr LE expr  [precedence=nonassoc, level=5]
Rule 26    expr -> expr GE expr  [precedence=nonassoc, level=5]
Rule 27    expr -> expr LT expr  [precedence=nonassoc, level=5]
Rule 28    expr -> expr GT expr  [precedence=nonassoc, level=5]
Rule 29    expr -> expr DOTDIV expr  [precedence=left, level=7]
Rule 30    expr -> expr DOTTIMES expr  [precedence=left, level=7]
Rule 31    expr -> expr DOTMINUS expr  [precedence=left, level=6]
Rule 32    expr -> expr DOTPLUS expr  [precedence=left, level=6]
Rule 33    expr -> expr / expr  [precedence=left, level=7]
Rule 34    expr -> expr * expr  [precedence=left, level=7]
Rule 35    expr -> expr - expr  [precedence=left, level=6]
Rule 36    expr -> expr + expr  [precedence=left, level=6]
Rule 37    tab -> ID [ expr , expr ]
Rule 38    tab -> ID [ expr ]
Rule 39    matrix -> mat_fun ( INTNUM )
Rule 40    matrix -> [ rows ]
Rule 41    rows -> row
Rule 42    rows -> row ; rows
Rule 43    row -> expr
Rule 44    row -> expr , row
Rule 45    mat_fun -> ONES
Rule 46    mat_fun -> EYE
Rule 47    mat_fun -> ZEROS
Rule 48    if_i -> IF ( expr ) instruction ELSE instruction  [precedence=right, level=2]
Rule 49    if_i -> IF ( expr ) instruction  [precedence=right, level=1]
Rule 50    return_i -> RETURN expr ;
Rule 51    return_i -> RETURN ;
Rule 52    while_l -> WHILE ( expr ) instruction
Rule 53    for_l -> FOR ID = expr : expr instruction
Rule 54    value -> matrix
Rule 55    value -> tab
Rule 56    value -> ID
Rule 57    assign -> value DIVASSIGN expr  [precedence=right, level=4]
Rule 58    assign -> value TIMESASSIGN expr  [precedence=right, level=4]
Rule 59    assign -> value MINUSASSIGN expr  [precedence=right, level=4]
Rule 60    assign -> value PLUSASSIGN expr  [precedence=right, level=4]
Rule 61    assign -> value = expr  [precedence=right, level=3]

Terminals, with rules where they appear:

(                    : 17 39 48 49 52
)                    : 17 39 48 49 52
*                    : 34
+                    : 36
,                    : 37 44
-                    : 16 35
/                    : 33
:                    : 53
;                    : 7 8 9 10 42 50 51
=                    : 53 61
BREAK                : 9
CONTINUE             : 8
DIVASSIGN            : 57
DOTDIV               : 29
DOTMINUS             : 31
DOTPLUS              : 32
DOTTIMES             : 30
ELSE                 : 48
EQ                   : 24
EYE                  : 46
FLOATNUM             : 18
FOR                  : 53
GE                   : 26
GT                   : 28
ID                   : 19 37 38 53 56
IF                   : 48 49
INTNUM               : 21 39
LE                   : 25
LT                   : 27
MINUSASSIGN          : 59
NEQ                  : 23
ONES                 : 45
PLUSASSIGN           : 60
PRINT                : 7
RETURN               : 50 51
STRING               : 20
TIMESASSIGN          : 58
TRANSPOSE            : 22
WHILE                : 52
ZEROS                : 47
[                    : 37 38 40
]                    : 37 38 40
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear:

assign               : 10
expr                 : 16 17 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 43 44 48 49 50 52 53 53 57 58 59 60 61
for_l                : 12
if_i                 : 11
instruction          : 4 5 48 48 49 52 53
instructions         : 3 4 6
instructions_or_empty : 1
mat_fun              : 39
matrix               : 15 54
program              : 0
return_i             : 14
row                  : 7 41 42 44
rows                 : 40 42
tab                  : 55
value                : 57 58 59 60 61
while_l              : 13


state 0

    (0) S' -> . program
    (1) program -> . instructions_or_empty
    (2) instructions_or_empty -> .
    (3) instructions_or_empty -> . instructions
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . PRINT row ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . assign ;
    (11) instruction -> . if_i
    (12) instruction -> . for_l
    (13) instruction -> . while_l
    (14) instruction -> . return_i
    (57) assign -> . value DIVASSIGN expr
    (58) assign -> . value TIMESASSIGN expr
    (59) assign -> . value MINUSASSIGN expr
    (60) assign -> . value PLUSASSIGN expr
    (61) assign -> . value = expr
    (48) if_i -> . IF ( expr ) instruction ELSE instruction
    (49) if_i -> . IF ( expr ) instruction
    (53) for_l -> . FOR ID = expr : expr instruction
    (52) while_l -> . WHILE ( expr ) instruction
    (50) return_i -> . RETURN expr ;
    (51) return_i -> . RETURN ;
    (54) value -> . matrix
    (55) value -> . tab
    (56) value -> . ID
    (39) matrix -> . mat_fun ( INTNUM )
    (40) matrix -> . [ rows ]
    (37) tab -> . ID [ expr , expr ]
    (38) tab -> . ID [ expr ]
    (45) mat_fun -> . ONES
    (46) mat_fun -> . EYE
    (47) mat_fun -> . ZEROS
    $end            reduce using rule 2 (instructions_or_empty -> .)
    {               shift and go to state 5
    PRINT           shift and go to state 6
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 17
    [               shift and go to state 23
    ONES            shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26

    program                        shift and go to state 1
    instructions_or_empty          shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    assign                         shift and go to state 9
    if_i                           shift and go to state 10
    for_l                          shift and go to state 11
    while_l                        shift and go to state 12
    return_i                       shift and go to state 13
    value                          shift and go to state 14
    matrix                         shift and go to state 20
    tab                            shift and go to state 21
    mat_fun                        shift and go to state 22

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_or_empty .
    $end            reduce using rule 1 (program -> instructions_or_empty .)


state 3

    (3) instructions_or_empty -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . PRINT row ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . assign ;
    (11) instruction -> . if_i
    (12) instruction -> . for_l
    (13) instruction -> . while_l
    (14) instruction -> . return_i
    (57) assign -> . value DIVASSIGN expr
    (58) assign -> . value TIMESASSIGN expr
    (59) assign -> . value MINUSASSIGN expr
    (60) assign -> . value PLUSASSIGN expr
    (61) assign -> . value = expr
    (48) if_i -> . IF ( expr ) instruction ELSE instruction
    (49) if_i -> . IF ( expr ) instruction
    (53) for_l -> . FOR ID = expr : expr instruction
    (52) while_l -> . WHILE ( expr ) instruction
    (50) return_i -> . RETURN expr ;
    (51) return_i -> . RETURN ;
    (54) value -> . matrix
    (55) value -> . tab
    (56) value -> . ID
    (39) matrix -> . mat_fun ( INTNUM )
    (40) matrix -> . [ rows ]
    (37) tab -> . ID [ expr , expr ]
    (38) tab -> . ID [ expr ]
    (45) mat_fun -> . ONES
    (46) mat_fun -> . EYE
    (47) mat_fun -> . ZEROS
    $end            reduce using rule 3 (instructions_or_empty -> instructions .)
    {               shift and go to state 5
    PRINT           shift and go to state 6
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 17
    [               shift and go to state 23
    ONES            shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26

    instruction                    shift and go to state 27
    assign                         shift and go to state 9
    if_i                           shift and go to state 10
    for_l                          shift and go to state 11
    while_l                        shift and go to state 12
    return_i                       shift and go to state 13
    value                          shift and go to state 14
    matrix                         shift and go to state 20
    tab                            shift and go to state 21
    mat_fun                        shift and go to state 22

state 4

    (5) instructions -> instruction .
    {               reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    [               reduce using rule 5 (instructions -> instruction .)
    ONES            reduce using rule 5 (instructions -> instruction .)
    EYE             reduce using rule 5 (instructions -> instruction .)
    ZEROS           reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . PRINT row ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . assign ;
    (11) instruction -> . if_i
    (12) instruction -> . for_l
    (13) instruction -> . while_l
    (14) instruction -> . return_i
    (57) assign -> . value DIVASSIGN expr
    (58) assign -> . value TIMESASSIGN expr
    (59) assign -> . value MINUSASSIGN expr
    (60) assign -> . value PLUSASSIGN expr
    (61) assign -> . value = expr
    (48) if_i -> . IF ( expr ) instruction ELSE instruction
    (49) if_i -> . IF ( expr ) instruction
    (53) for_l -> . FOR ID = expr : expr instruction
    (52) while_l -> . WHILE ( expr ) instruction
    (50) return_i -> . RETURN expr ;
    (51) return_i -> . RETURN ;
    (54) value -> . matrix
    (55) value -> . tab
    (56) value -> . ID
    (39) matrix -> . mat_fun ( INTNUM )
    (40) matrix -> . [ rows ]
    (37) tab -> . ID [ expr , expr ]
    (38) tab -> . ID [ expr ]
    (45) mat_fun -> . ONES
    (46) mat_fun -> . EYE
    (47) mat_fun -> . ZEROS
    {               shift and go to state 5
    PRINT           shift and go to state 6
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 17
    [               shift and go to state 23
    ONES            shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26

    instructions                   shift and go to state 28
    instruction                    shift and go to state 4
    assign                         shift and go to state 9
    if_i                           shift and go to state 10
    for_l                          shift and go to state 11
    while_l                        shift and go to state 12
    return_i                       shift and go to state 13
    value                          shift and go to state 14
    matrix                         shift and go to state 20
    tab                            shift and go to state 21
    mat_fun                        shift and go to state 22

state 6

    (7) instruction -> PRINT . row ;
    (43) row -> . expr
    (44) row -> . expr , row
    (15) expr -> . matrix
    (16) expr -> . - expr
    (17) expr -> . ( expr )
    (18) expr -> . FLOATNUM
    (19) expr -> . ID
    (20) expr -> . STRING
    (21) expr -> . INTNUM
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr EQ expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr GE expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr DOTDIV expr
    (30) expr -> . expr DOTTIMES expr
    (31) expr -> . expr DOTMINUS expr
    (32) expr -> . expr DOTPLUS expr
    (33) expr -> . expr / expr
    (34) expr -> . expr * expr
    (35) expr -> . expr - expr
    (36) expr -> . expr + expr
    (39) matrix -> . mat_fun ( INTNUM )
    (40) matrix -> . [ rows ]
    (45) mat_fun -> . ONES
    (46) mat_fun -> . EYE
    (47) mat_fun -> . ZEROS
    -               shift and go to state 32
    (               shift and go to state 33
    FLOATNUM        shift and go to state 34
    ID              shift and go to state 35
    STRING          shift and go to state 36
    INTNUM          shift and go to state 37
    [               shift and go to state 23
    ONES            shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26

    row                            shift and go to state 29
    expr                           shift and go to state 30
    matrix                         shift and go to state 31
    mat_fun                        shift and go to state 22

state 7

    (8) instruction -> CONTINUE . ;
    ;               shift and go to state 38


state 8

    (9) instruction -> BREAK . ;
    ;               shift and go to state 39


state 9

    (10) instruction -> assign . ;
    ;               shift and go to state 40


state 10

    (11) instruction -> if_i .
    {               reduce using rule 11 (instruction -> if_i .)
    PRINT           reduce using rule 11 (instruction -> if_i .)
    CONTINUE        reduce using rule 11 (instruction -> if_i .)
    BREAK           reduce using rule 11 (instruction -> if_i .)
    IF              reduce using rule 11 (instruction -> if_i .)
    FOR             reduce using rule 11 (instruction -> if_i .)
    WHILE           reduce using rule 11 (instruction -> if_i .)
    RETURN          reduce using rule 11 (instruction -> if_i .)
    ID              reduce using rule 11 (instruction -> if_i .)
    [               reduce using rule 11 (instruction -> if_i .)
    ONES            reduce using rule 11 (instruction -> if_i .)
    EYE             reduce using rule 11 (instruction -> if_i .)
    ZEROS           reduce using rule 11 (instruction -> if_i .)
    $end            reduce using rule 11 (instruction -> if_i .)
    }               reduce using rule 11 (instruction -> if_i .)
    ELSE            reduce using rule 11 (instruction -> if_i .)


state 11

    (12) instruction -> for_l .
    {               reduce using rule 12 (instruction -> for_l .)
    PRINT           reduce using rule 12 (instruction -> for_l .)
    CONTINUE        reduce using rule 12 (instruction -> for_l .)
    BREAK           reduce using rule 12 (instruction -> for_l .)
    IF              reduce using rule 12 (instruction -> for_l .)
    FOR             reduce using rule 12 (instruction -> for_l .)
    WHILE           reduce using rule 12 (instruction -> for_l .)
    RETURN          reduce using rule 12 (instruction -> for_l .)
    ID              reduce using rule 12 (instruction -> for_l .)
    [               reduce using rule 12 (instruction -> for_l .)
    ONES            reduce using rule 12 (instruction -> for_l .)
    EYE             reduce using rule 12 (instruction -> for_l .)
    ZEROS           reduce using rule 12 (instruction -> for_l .)
    $end            reduce using rule 12 (instruction -> for_l .)
    }               reduce using rule 12 (instruction -> for_l .)
    ELSE            reduce using rule 12 (instruction -> for_l .)


state 12

    (13) instruction -> while_l .
    {               reduce using rule 13 (instruction -> while_l .)
    PRINT           reduce using rule 13 (instruction -> while_l .)
    CONTINUE        reduce using rule 13 (instruction -> while_l .)
    BREAK           reduce using rule 13 (instruction -> while_l .)
    IF              reduce using rule 13 (instruction -> while_l .)
    FOR             reduce using rule 13 (instruction -> while_l .)
    WHILE           reduce using rule 13 (instruction -> while_l .)
    RETURN          reduce using rule 13 (instruction -> while_l .)
    ID              reduce using rule 13 (instruction -> while_l .)
    [               reduce using rule 13 (instruction -> while_l .)
    ONES            reduce using rule 13 (instruction -> while_l .)
    EYE             reduce using rule 13 (instruction -> while_l .)
    ZEROS           reduce using rule 13 (instruction -> while_l .)
    $end            reduce using rule 13 (instruction -> while_l .)
    }               reduce using rule 13 (instruction -> while_l .)
    ELSE            reduce using rule 13 (instruction -> while_l .)


state 13

    (14) instruction -> return_i .
    {               reduce using rule 14 (instruction -> return_i .)
    PRINT           reduce using rule 14 (instruction -> return_i .)
    CONTINUE        reduce using rule 14 (instruction -> return_i .)
    BREAK           reduce using rule 14 (instruction -> return_i .)
    IF              reduce using rule 14 (instruction -> return_i .)
    FOR             reduce using rule 14 (instruction -> return_i .)
    WHILE           reduce using rule 14 (instruction -> return_i .)
    RETURN          reduce using rule 14 (instruction -> return_i .)
    ID              reduce using rule 14 (instruction -> return_i .)
    [               reduce using rule 14 (instruction -> return_i .)
    ONES            reduce using rule 14 (instruction -> return_i .)
    EYE             reduce using rule 14 (instruction -> return_i .)
    ZEROS           reduce using rule 14 (instruction -> return_i .)
    $end            reduce using rule 14 (instruction -> return_i .)
    }               reduce using rule 14 (instruction -> return_i .)
    ELSE            reduce using rule 14 (instruction -> return_i .)


state 14

    (57) assign -> value . DIVASSIGN expr
    (58) assign -> value . TIMESASSIGN expr
    (59) assign -> value . MINUSASSIGN expr
    (60) assign -> value . PLUSASSIGN expr
    (61) assign -> value . = expr
    DIVASSIGN       shift and go to state 41
    TIMESASSIGN     shift and go to state 42
    MINUSASSIGN     shift and go to state 43
    PLUSASSIGN      shift and go to state 44
    =               shift and go to state 45


state 15

    (48) if_i -> IF . ( expr ) instruction ELSE instruction
    (49) if_i -> IF . ( expr ) instruction
    (               shift and go to state 46


state 16

    (53) for_l -> FOR . ID = expr : expr instruction
    ID              shift and go to state 47


state 17

    (56) value -> ID .
    (37) tab -> ID . [ expr , expr ]
    (38) tab -> ID . [ expr ]
    DIVASSIGN       reduce using rule 56 (value -> ID .)
    TIMESASSIGN     reduce using rule 56 (value -> ID .)
    MINUSASSIGN     reduce using rule 56 (value -> ID .)
    PLUSASSIGN      reduce using rule 56 (value -> ID .)
    =               reduce using rule 56 (value -> ID .)
    [               shift and go to state 48


state 18

    (52) while_l -> WHILE . ( expr ) instruction
    (               shift and go to state 49


state 19

    (50) return_i -> RETURN . expr ;
    (51) return_i -> RETURN . ;
    (15) expr -> . matrix
    (16) expr -> . - expr
    (17) expr -> . ( expr )
    (18) expr -> . FLOATNUM
    (19) expr -> . ID
    (20) expr -> . STRING
    (21) expr -> . INTNUM
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr EQ expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr GE expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr DOTDIV expr
    (30) expr -> . expr DOTTIMES expr
    (31) expr -> . expr DOTMINUS expr
    (32) expr -> . expr DOTPLUS expr
    (33) expr -> . expr / expr
    (34) expr -> . expr * expr
    (35) expr -> . expr - expr
    (36) expr -> . expr + expr
    (39) matrix -> . mat_fun ( INTNUM )
    (40) matrix -> . [ rows ]
    (45) mat_fun -> . ONES
    (46) mat_fun -> . EYE
    (47) mat_fun -> . ZEROS
    ;               shift and go to state 51
    -               shift and go to state 32
    (               shift and go to state 33
    FLOATNUM        shift and go to state 34
    ID              shift and go to state 35
    STRING          shift and go to state 36
    INTNUM          shift and go to state 37
    [               shift and go to state 23
    ONES            shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26

    expr                           shift and go to state 50
    matrix                         shift and go to state 31
    mat_fun                        shift and go to state 22

state 20

    (54) value -> matrix .
    DIVASSIGN       reduce using rule 54 (value -> matrix .)
    TIMESASSIGN     reduce using rule 54 (value -> matrix .)
    MINUSASSIGN     reduce using rule 54 (value -> matrix .)
    PLUSASSIGN      reduce using rule 54 (value -> matrix .)
    =               reduce using rule 54 (value -> matrix .)


state 21

    (55) value -> tab .
    DIVASSIGN       reduce using rule 55 (value -> tab .)
    TIMESASSIGN     reduce using rule 55 (value -> tab .)
    MINUSASSIGN     reduce using rule 55 (value -> tab .)
    PLUSASSIGN      reduce using rule 55 (value -> tab .)
    =               reduce using rule 55 (value -> tab .)


state 22

    (39) matrix -> mat_fun . ( INTNUM )
    (               shift and go to state 52


state 23

    (40) matrix -> [ . rows ]
    (41) rows -> . row
    (42) rows -> . row ; rows
    (43) row -> . expr
    (44) row -> . expr , row
    (15) expr -> . matrix
    (16) expr -> . - expr
    (17) expr -> . ( expr )
    (18) expr -> . FLOATNUM
    (19) expr -> . ID
    (20) expr -> . STRING
    (21) expr -> . INTNUM
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr EQ expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr GE expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr DOTDIV expr
    (30) expr -> . expr DOTTIMES expr
    (31) expr -> . expr DOTMINUS expr
    (32) expr -> . expr DOTPLUS expr
    (33) expr -> . expr / expr
    (34) expr -> . expr * expr
    (35) expr -> . expr - expr
    (36) expr -> . expr + expr
    (39) matrix -> . mat_fun ( INTNUM )
    (40) matrix -> . [ rows ]
    (45) mat_fun -> . ONES
    (46) mat_fun -> . EYE
    (47) mat_fun -> . ZEROS
    -               shift and go to state 32
    (               shift and go to state 33
    FLOATNUM        shift and go to state 34
    ID              shift and go to state 35
    STRING          shift and go to state 36
    INTNUM          shift and go to state 37
    [               shift and go to state 23
    ONES            shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26

    rows                           shift and go to state 53
    row                            shift and go to state 54
    expr                           shift and go to state 30
    matrix                         shift and go to state 31
    mat_fun                        shift and go to state 22

state 24

    (45) mat_fun -> ONES .
    (               reduce using rule 45 (mat_fun -> ONES .)


state 25

    (46) mat_fun -> EYE .
    (               reduce using rule 46 (mat_fun -> EYE .)


state 26

    (47) mat_fun -> ZEROS .
    (               reduce using rule 47 (mat_fun -> ZEROS .)


state 27

    (4) instructions -> instructions instruction .
    {               reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    [               reduce using rule 4 (instructions -> instructions instruction .)
    ONES            reduce using rule 4 (instructions -> instructions instruction .)
    EYE             reduce using rule 4 (instructions -> instructions instruction .)
    ZEROS           reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 28

    (6) instruction -> { instructions . }
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instructions }
    (7) instruction -> . PRINT row ;
    (8) instruction -> . CONTINUE ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . assign ;
    (11) instruction -> . if_i
    (12) instruction -> . for_l
    (13) instruction -> . while_l
    (14) instruction -> . return_i
    (57) assign -> . value DIVASSIGN expr
    (58) assign -> . value TIMESASSIGN expr
    (59) assign -> . value MINUSASSIGN expr
    (60) assign -> . value PLUSASSIGN expr
    (61) assign -> . value = expr
    (48) if_i -> . IF ( expr ) instruction ELSE instruction
    (49) if_i -> . IF ( expr ) instruction
    (53) for_l -> . FOR ID = expr : expr instruction
    (52) while_l -> . WHILE ( expr ) instruction
    (50) return_i -> . RETURN expr ;
    (51) return_i -> . RETURN ;
    (54) value -> . matrix
    (55) value -> . tab
    (56) value -> . ID
    (39) matrix -> . mat_fun ( INTNUM )
    (40) matrix -> . [ rows ]
    (37) tab -> . ID [ expr , expr ]
    (38) tab -> . ID [ expr ]
    (45) mat_fun -> . ONES
    (46) mat_fun -> . EYE
    (47) mat_fun -> . ZEROS
    }               shift and go to state 55
    {               shift and go to state 5
    PRINT           shift and go to state 6
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    RETURN          shift and go to state 19
    ID              shift and go to state 17
    [               shift and go to state 23
    ONES            shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26

    instruction                    shift and go to state 27
    assign                         shift and go to state 9
    if_i                           shift and go to state 10
    for_l                          shift and go to state 11
    while_l                        shift and go to state 12
    return_i                       shift and go to state 13
    value                          shift and go to state 14
    matrix                         shift and go to state 20
    tab                            shift and go to state 21
    mat_fun                        shift and go to state 22

state 29

    (7) instruction -> PRINT row . ;
    ;               shift and go to state 56


state 30

    (43) row -> expr .
    (44) row -> expr . , row
    (22) expr -> expr . TRANSPOSE
    (23) expr -> expr . NEQ expr
    (24) expr -> expr . EQ expr
    (25) expr -> expr . LE expr
    (26) expr -> expr . GE expr
    (27) expr -> expr . LT expr
    (28) expr -> expr . GT expr
    (29) expr -> expr . DOTDIV expr
    (30) expr -> expr . DOTTIMES expr
    (31) expr -> expr . DOTMINUS expr
    (32) expr -> expr . DOTPLUS expr
    (33) expr -> expr . / expr
    (34) expr -> expr . * expr
    (35) expr -> expr . - expr
    (36) expr -> expr . + expr
    ;               reduce using rule 43 (row -> expr .)
    ]               reduce using rule 43 (row -> expr .)
    ,               shift and go to state 57
    TRANSPOSE       shift and go to state 58
    NEQ             shift and go to state 59
    EQ              shift and go to state 60
    LE              shift and go to state 61
    GE              shift and go to state 62
    LT              shift and go to state 63
    GT              shift and go to state 64
    DOTDIV          shift and go to state 65
    DOTTIMES        shift and go to state 66
    DOTMINUS        shift and go to state 67
    DOTPLUS         shift and go to state 68
    /               shift and go to state 69
    *               shift and go to state 70
    -               shift and go to state 71
    +               shift and go to state 72


state 31

    (15) expr -> matrix .
    ,               reduce using rule 15 (expr -> matrix .)
    TRANSPOSE       reduce using rule 15 (expr -> matrix .)
    NEQ             reduce using rule 15 (expr -> matrix .)
    EQ              reduce using rule 15 (expr -> matrix .)
    LE              reduce using rule 15 (expr -> matrix .)
    GE              reduce using rule 15 (expr -> matrix .)
    LT              reduce using rule 15 (expr -> matrix .)
    GT              reduce using rule 15 (expr -> matrix .)
    DOTDIV          reduce using rule 15 (expr -> matrix .)
    DOTTIMES        reduce using rule 15 (expr -> matrix .)
    DOTMINUS        reduce using rule 15 (expr -> matrix .)
    DOTPLUS         reduce using rule 15 (expr -> matrix .)
    /               reduce using rule 15 (expr -> matrix .)
    *               reduce using rule 15 (expr -> matrix .)
    -               reduce using rule 15 (expr -> matrix .)
    +               reduce using rule 15 (expr -> matrix .)
    ;               reduce using rule 15 (expr -> matrix .)
    ]               reduce using rule 15 (expr -> matrix .)
    )               reduce using rule 15 (expr -> matrix .)
    :               reduce using rule 15 (expr -> matrix .)
    {               reduce using rule 15 (expr -> matrix .)
    PRINT           reduce using rule 15 (expr -> matrix .)
    CONTINUE        reduce using rule 15 (expr -> matrix .)
    BREAK           reduce using rule 15 (expr -> matrix .)
    IF              reduce using rule 15 (expr -> matrix .)
    FOR             reduce using rule 15 (expr -> matrix .)
    WHILE           reduce using rule 15 (expr -> matrix .)
    RETURN          reduce using rule 15 (expr -> matrix .)
    ID              reduce using rule 15 (expr -> matrix .)
    [               reduce using rule 15 (expr -> matrix .)
    ONES            reduce using rule 15 (expr -> matrix .)
    EYE             reduce using rule 15 (expr -> matrix .)
    ZEROS           reduce using rule 15 (expr -> matrix .)


state 32

    (16) expr -> - . expr
    (15) expr -> . matrix
    (16) expr -> . - expr
    (17) expr -> . ( expr )
    (18) expr -> . FLOATNUM
    (19) expr -> . ID
    (20) expr -> . STRING
    (21) expr -> . INTNUM
    (22) expr -> . expr TRANSPOSE
    (23) expr -> . expr NEQ expr
    (24) expr -> . expr EQ expr
    (25) expr -> . expr LE expr
    (26) expr -> . expr GE expr
    (27) expr -> . expr LT expr
    (28) expr -> . expr GT expr
    (29) expr -> . expr DOTDIV expr
    (30) expr -> . expr DOTTIMES expr
    (31) expr -> . expr DOTMINUS expr
    (32) expr -> . expr DOTPLUS expr
    (33) expr -> . expr / expr
    (34) expr -> . expr * expr
    (35) expr -> . expr - expr
    (36) expr -> . expr + expr
    (39) matrix -> . mat_fun ( INTNUM )
    (40) matrix -> . [ rows ]
    (45) mat_fun -> . ONES
    (46) mat_fun -> . EYE
    (47) mat_fun -> . ZEROS
    -               shift and go to state 32
    (               shift and go to state 33
    FLOATNUM        shift and go to state 34
    ID              shift and go to state 35
    STRING          shift and go to state 36
    INTNUM          shift and go to state 37
    [               shift and go to state 23
    ONES            shift and go to state 24
    EYE             shift and go to state 25
    ZEROS           shift and go to state 26

    expr                           shift and go to state 73
    matrix                         shift and go to state 31
    mat_fun                        shift and go to state 22

state 33
